eks-refresher/canary/kube-manifests/v2-notification-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v2-notification-microservice
  labels:
    app: notification-restapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-restapp     
  template:
    metadata:
      labels:
        app: notification-restapp
    spec:
      containers:
        - name: notification-service
          image: stacksimplify/kube-notifications-microservice:4.0.0-AWS-XRay
          ports:
            - containerPort: 8096
          imagePullPolicy: Always
